refactor: assertj로 변경